test/CheckError/Cast/ConstRefLocalVarImplicitDissolve.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export void function(const int& constValueRef) {
	// CHECK: .loci:6:2: error: Can't implicitly cast value of type 'ref<lval<ref<const(int_t)>(const(int_t)&)>(value_lval_t<ref<const(int_t)>(const(int_t)&)>)>(lval<ref<const(int_t)>(const(int_t)&)>(value_lval_t<ref<const(int_t)>(const(int_t)&)>)&)' to type 'ref<int_t>(int_t&)'.
	unused int& valueRef = constValueRef;
}

// CHECK: 1 error generated.
